<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".ProfilActivity">



<TextView
    android:id="@+id/nom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_nom"
    android:padding="20dp" />


    <TextView
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_prenom"
        android:padding="20dp" />

    <TextView
        android:id="@+id/telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telephone"
        android:padding="20dp" />

    <TextView
        android:id="@+id/etablissement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_etablissement"
        android:padding="20dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_genre"
        android:padding="20dp" />

</LinearLayout>